tests/src/snapshots/fe_compiler_tests__compile_errors__assign_type_mismatch.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: mismatched types
  ┌─ [snippet]:4:3
  │
4 │   x = address(0)
  │   ^   ---------- this value has incompatible type `address`
  │   │    
  │   this variable has type `u256`


