tests/src/snapshots/fe_compiler_tests__compile_errors__aug_assign_non_numeric.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: The types for this operation must be numeric
  ┌─ [snippet]:5:3
  │
5 │   a += b
  │   ^    ^


