tests/src/snapshots/fe_compiler_tests__compile_errors__binary_op_add_uints.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---


TypeError on line 5
[31ma + b[0m
