tests/src/snapshots/fe_compiler_tests__compile_errors__binary_op_boolean_mismatch1.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: binary op `and` operands must have type `bool`
  ┌─ [snippet]:3:3
  │
3 │   10 and true
  │   ^^ this has type `u256`; expected `bool`


