tests/src/snapshots/fe_compiler_tests__compile_errors__binary_op_lshift_bool.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: The types for this operation must be numeric
  ┌─ [snippet]:5:3
  │
5 │   a << b
  │   ^    ^


