tests/src/snapshots/fe_compiler_tests__compile_errors__binary_op_pow_int.snap
---
source: tests/src/compile_errors.rs
expression: "error_string(\"[snippet]\", &src)"

---


TypeError on line 4
pub def f():
  a: u256 = 1
  [31mb: i256 = 2[0m
  a ** b
